# NovaDesk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.MD  dev.py  pyproject.toml  requirements.txt  test_scanner.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  ROADMAP.md
scripts/: fix_title_fonts.py  refactor_theme.py
scripts/dev/: clean_cache.py  run_project.py
src/app/: app.py
src/cli/: banner.py
src/cli/commands/: clean.py  project.py  run.py
src/core/: events.py  router.py  theme.py
src/services/developer_tools/: __init__.py  base64_tool.py  hash_tool.py  json_formatter.py  password.py  text_tools.py  uuid_generator.py
src/services/downloads/: file_types.py  organizer.py  scanner.py
src/services/project_manager/: creator.py  git_manager.py  templates.py  venv.py
src/services/settings/: manager.py
src/services/workspace/: __init__.py  analyzer.py  cleaner.py  scanner.py
src/ui/components/: button.py  quick_action.py  search_bar.py  sidebar.py  stat_card.py  success_button.py  welcome_header.py
src/ui/pages/: about.py  ai.py  dashboard.py  developer_tools.py  downloads.py  projects.py  settings.py  workspace.py
src/ui/themes/: colors.py  fonts.py  spacing.py  styles.py
src/ui/windows/: main_window.py
tests/unit/: test_project_creator.py
